--- a/Prototipo2P/nbproject/project.properties
+++ b/Prototipo2P/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=parcial2.Parcial2
+main.class=ventanas.MDI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
